[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/art/traps/Turret/TurretHead.png" type="Texture" id=1]
[ext_resource path="res://assets/art/traps/Turret/TurretBase.png" type="Texture" id=2]
[ext_resource path="res://src/Traps/Turret/Turrtet.gd" type="Script" id=3]
[ext_resource path="res://src/Traps/Turret/TurretShot.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.5, 8 )

[sub_resource type="CircleShape2D" id=2]
radius = 250.0

[node name="Turrtet" type="StaticBody2D"]
collision_layer = 2
collision_mask = 2147483648
script = ExtResource( 3 )
rotate_speed = 10.0
turretShot = ExtResource( 4 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.52028, 2.97302 )
shape = SubResource( 1 )

[node name="TurretBase" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="TurretHead" type="Sprite" parent="."]
texture = ExtResource( 1 )
flip_h = true

[node name="RayCast2D" type="RayCast2D" parent="TurretHead"]
enabled = true
cast_to = Vector2( 250, 0 )
collision_mask = 2147483665
collide_with_areas = true

[node name="Activator" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Activator"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="Activator" to="." method="bodyEntered"]
[connection signal="body_exited" from="Activator" to="." method="bodyExited"]
[connection signal="timeout" from="Timer" to="." method="timeout"]
